clusters/homelab/apps/actual/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: actual
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
