clusters/homelab/apps/actual/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual
  namespace: actual
  labels:
    app: actual
spec:
  type: ClusterIP
  ports:
  - port: 5006
    targetPort: 5006
    protocol: TCP
    name: http
  selector:
    app: actual
