clusters/homelab/apps/actual/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actual
  namespace: actual
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: budget.tkuipers.ca
    nginx.ingress.kubernetes.io/auth-url: http://authelia.authelia.svc.cluster.local/api/verify
    nginx.ingress.kubernetes.io/auth-signin: https://auth.tkuipers.ca/?rd=https://$host$escaped_request_uri
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - budget.tkuipers.ca
    secretName: actual-tls
  rules:
  - host: budget.tkuipers.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: actual
            port:
              number: 5006
